--- a/add.qmd
+++ b/add.qmd
@@ -1,3 +1,3 @@
 Adding new file add.qmd again to show commits.
-Adding long line.Adding long line.Adding long line.Adding long line.Adding long line.Adding long line.Adding long line.
-Adding a short line. 
+Adding SHORT line.Adding long line.Adding long line.Adding long line.Adding long line.Adding long line.Adding long line.
+Adding a LONG line. 
